noinst_LTLIBRARIES = libguichan_widgets.la

# The Gui-chan library sources
libguichan_widgets_la_SOURCES = \
	button.cpp		\
	checkbox.cpp		\
	container.cpp		\
	dropdown.cpp		\
	icon.cpp		\
	label.cpp		\
	listbox.cpp		\
	radiobutton.cpp		\
	scrollarea.cpp		\
	slider.cpp		\
	textbox.cpp		\
	textfield.cpp

