libfifechanincludedir = $(includedir)/fifechan/widgets/

libfifechaninclude_HEADERS =	\
	adjustingcontainer.hpp	\
	button.hpp		\
	checkbox.hpp		\
	container.hpp		\
	dropdown.hpp		\
	icon.hpp		\
	iconprogressbar.hpp	\
	imagebutton.hpp		\
	label.hpp		\
	listbox.hpp		\
	passwordfield.hpp	\
	radiobutton.hpp		\
	scrollarea.hpp		\
	slider.hpp		\
	spacer.hpp		\
	tab.hpp			\
	tabbedarea.hpp		\
	textbox.hpp		\
	textfield.hpp		\
	window.hpp
