libfifechanincludedir = $(includedir)/fifechan/widgets/

libfifechaninclude_HEADERS =	\
	adjustingcontainer.hpp	\
	bargraph.hpp		\
	button.hpp		\
	checkbox.hpp		\
	container.hpp		\
	curvegraph.hpp		\
	dropdown.hpp		\
	icon.hpp		\
	iconprogressbar.hpp	\
	imagebutton.hpp		\
	imageprogressbar.hpp	\
	label.hpp		\
	linegraph.hpp		\
	listbox.hpp		\
	passwordfield.hpp	\
	piegraph.hpp		\
	pointgraph.hpp		\
	radiobutton.hpp		\
	scrollarea.hpp		\
	slider.hpp		\
	spacer.hpp		\
	tab.hpp			\
	tabbedarea.hpp		\
	textbox.hpp		\
	textfield.hpp		\
	togglebutton.hpp	\
	window.hpp
